<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/activity_user_detail"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="es.voghdev.prjdagger2.ui.activity.UserDetailActivity">
    <ImageView
        android:layout_width="120dp"
        android:layout_height="120dp"
        android:src="@color/light_gray"
        android:id="@+id/userImage"/>
    <TextView
        android:textColor="@android:color/background_dark"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/tvNombre"
        android:text="@string/name"
        android:layout_toRightOf="@+id/userImage"
        android:layout_marginLeft="@dimen/user_data_margin"/>
    <TextView
        android:layout_marginTop="@dimen/user_data_margin_T"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/name"
        android:layout_toRightOf="@+id/userImage"
        android:layout_marginLeft="@dimen/user_data_margin"
        android:layout_below="@+id/tvNombre"/>
    <TextView
        android:layout_marginTop="@dimen/user_data_margin_T"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/tvAddress"
        android:layout_toRightOf="@+id/userImage"
        android:layout_below="@id/name"
        android:text="@string/user_address"
        android:layout_marginLeft="@dimen/user_data_margin"
        android:textColor="@android:color/background_dark"/>
    <TextView
        android:layout_marginTop="@dimen/user_data_margin_T"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/userAddress"
        android:layout_toRightOf="@id/userImage"
        android:layout_below="@+id/tvAddress"
        android:layout_marginLeft="@dimen/user_data_margin"
        />
    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/userAddress"
        android:layout_toRightOf="@+id/userImage"
        android:text="@string/user_name"
        android:textColor="@android:color/background_dark"
        android:layout_marginLeft="@dimen/user_data_margin"
        android:id="@+id/tvUserName"
        />
    <TextView
        android:layout_marginTop="@dimen/user_data_margin_T"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/userName"
        android:layout_toRightOf="@+id/userImage"
        android:layout_below="@id/tvUserName"
        android:layout_marginLeft="@dimen/user_data_margin"
        />
    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/user_thumbnail"
        android:textColor="@android:color/background_dark"
        android:layout_below="@+id/userImage"
        android:layout_marginTop="@dimen/user_data_margin"
        android:id="@+id/tvUserThumbnail"
        />
    <TextView
        android:layout_marginTop="@dimen/user_data_margin_T"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/tvUserThumbnail"
        android:id="@+id/userThumbnail"/>
    <TextView
        android:layout_marginTop="@dimen/user_data_margin"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/user_facebookId"
        android:layout_below="@+id/userThumbnail"
        android:id="@+id/tvFacebookId"
        android:textColor="@android:color/background_dark"
        />
    <TextView
        android:layout_marginTop="@dimen/user_data_margin_T"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/tvFacebookId"
        android:id="@+id/userFacebookId"/>
    <TextView
        android:layout_marginTop="@dimen/user_data_margin"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/user_email"
        android:textColor="@android:color/background_dark"
        android:layout_below="@+id/userFacebookId"
        android:id="@+id/tvUserEmail"
        />
    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/userEmail"
        android:layout_below="@+id/tvUserEmail"
        />
</RelativeLayout>
